# mkt-manager

./: .replit  app.py  config.py  pyproject.toml
attached_assets/: Pasted--goreleaser-yaml-version-2-before-hooks-make-man-make-readme-make-rsrc-bui-1741593279046.txt
static/css/: style.css  styles.css
static/js/: main.js
static/js/backup/: manager.js
templates/: index.html  report.html
templates/backup/: manager.html
utils/: file_analyzer.py  ip_monitoring.py  language_detector.py  mikrotik_utils.py  notifications.py  repo_analyzer.py
